--- a/xyz/CS.css
+++ b/xyz/CS.css
@@ -4,7 +4,7 @@
     border-bottom: blueviolet;
     border-right: blue;
     border-left:aliceblue;
-    border-left:cadetblue;
+    border-top:cadetblue;
 }
 #html{
     width:200px;
